# photo-gallery

./: .gitignore  asset-manifest.json  index.html  package.json
admin_cli/: Cargo.toml
admin_cli/src/: file_util.rs  main.rs  mongodb_connection.rs
backend/: Cargo.toml
backend/src/: main.rs  mongodb_connection.rs
frontend/: package.json
frontend/public/: index.html
frontend/src/: AlbumPage.tsx  App.tsx  GalleryPage.tsx  MainPage.tsx  Navbar.tsx  NotFoundPage.tsx  index.css  index.scss  index.tsx
static/css/: main.0a965096.css  main.0a965096.css.map  main.1368cc64.css  main.1368cc64.css.map  main.1a164091.css  main.1a164091.css.map  main.1b1d8e3b.css  main.1b1d8e3b.css.map  main.2aff593a.css  main.2aff593a.css.map  main.34ccea10.css  main.34ccea10.css.map  main.4ed084b7.css  main.4ed084b7.css.map  main.68d18689.css  main.68d18689.css.map  main.73e2fc5e.css  main.73e2fc5e.css.map  main.97a7c2ce.css  main.97a7c2ce.css.map  main.a6e8d6b6.css  main.a6e8d6b6.css.map  main.be3d9430.css  main.be3d9430.css.map  main.d4df7149.css  main.d4df7149.css.map  main.d80bf273.css  main.d80bf273.css.map  main.fce97bfe.css  main.fce97bfe.css.map  main.fd870cf2.css  main.fd870cf2.css.map
static/js/: main.0d92bc3e.js  main.0d92bc3e.js.map  main.1058483b.js  main.1058483b.js.map  main.136bb983.js  main.136bb983.js.map  main.1b26e5bf.js  main.1b26e5bf.js.map  main.1b7b7747.js  main.1b7b7747.js.map  main.20c07e7a.js  main.20c07e7a.js.map  main.24aa9dd6.js  main.24aa9dd6.js.map  main.489c3055.js  main.489c3055.js.map  main.5ebc06f2.js  main.5ebc06f2.js.map  main.769ab2b0.js  (+33 more)
(+18 files in other folders)
