[package]
name = "photo_admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.3.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.9"
serde = { version = "1.0.141", features = ["derive"] }
dotenv = "0.15.0"
args = "2.0"
getopts = "0.2"
image = "0.24.3"
