[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
mongodb = "2.3.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.9"
mini-redis = "0.4"
serde = { version = "1.0.141", features = ["derive"] }
dotenv = "0.15.0"
# rocket_cors = "0.5.1"
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
rand = "0.8.5"
image = "0.24.3"

